<resources>
    <string name="app_name">expensio</string>
    <string name="home">HOME</string>
    <string name="splash_content_description">Logo of the application</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="expensio">Expensio</string>
    <string name="Manage">Manage your expenses</string>
    <string name="action_settings">Settings</string>
    <string name="todays_expenses">"Today's expenses"</string>
    <string name="title_activity_set_budget">Set budget</string>
    <string name="setBudget">Set budget</string>
    <string name="view_spend_trends">View spend trends</string>
    <string name="add_category">View or add category</string>
    <string name="debts_and_loans">Debts and loans</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="set_your_budget">Set your Budget</string>
    <string name="hint_amount">Enter budget amount</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="priority">Priority</string>
    <string name="add_new_cat">Add a new category</string>

    <!--error messages-->
    <string name="no_expenses">No expenses added yet!</string>

    <!--input hints-->
    <string name="amount">Enter amount of loan</string>
    <string name="actor">Enter debiter or crediter</string>
    <string name="remark">Enter comments</string>

    <!--titles-->
    <string name="loan_title">Add a loan or debt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="planets_array">
        <item>choose category</item>
        <item>Category1</item>
        <item>Category2</item>
        <item>Category3</item>
        <item>Category4</item>

    </string-array>

    <string name="Category_list">Category list</string>
    <string name="Add_debt_loan">Add a debt or loan</string>
    <string name="Budget_list">Current Budget</string>
    <string name="Add_expense">Add expense</string>


</resources>
