<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_category"
            android:icon="@drawable/ic_add_cat"
            android:title="@string/add_category" />
        <item
            android:id="@+id/set_budget"
            android:icon="@drawable/ic_action_name"
            android:title="@string/setBudget" />
        <item
            android:id="@+id/view_spend_trends"
            android:icon="@drawable/ic_view_icon"
            android:title="@string/view_spend_trends" />
        <item
            android:id="@+id/debts_and_loans"
            android:icon="@drawable/ic_debts_loans"
            android:title="@string/debts_and_loans" />
    </group>

  <!--  <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
